--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   scan-and-comment:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
