--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -6,7 +6,7 @@ on:
       - Dockerfile
 
 jobs:
-  scan-and-comment:
+  dockerfile-scan:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
@@ -25,33 +25,37 @@ jobs:
       - name: Scan Docker image for OS vulnerabilities
         run: |
           trivy image --format table --output os-trivy-result.txt my-docker-image
+      - name: Scan file system in Docker container (apt and others)
+        run: |
+          docker create --name temp-container my-docker-image
+          docker export temp-container > temp-container.tar
+          mkdir temp-container-filesystem && tar -xf temp-container.tar -C temp-container-filesystem
+          trivy fs --format table --output fs-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM temp-container-filesystem || echo "No vulnerabilities found"
+          docker rm temp-container
       - name: Scan npm packages in Docker container
         run: |
-          # Dockerコンテナからpackage-lock.jsonを抽出
-          docker create --name temp-container my-docker-image
-          docker cp temp-container:/app/package-lock.json package-lock.json || echo "No package-lock.json found"
-          docker rm temp-container
-
-          # package-lock.jsonが存在する場合、Trivyでスキャン実行
-          if [ -f package-lock.json ]; then
+          # package-lock.jsonを抽出
+          if [ -f temp-container-filesystem/app/package-lock.json ]; then
             echo "Scanning npm dependencies..."
-            trivy fs --format table --output npm-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM .
+            trivy fs --format table --output npm-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM temp-container-filesystem/app || echo "No vulnerabilities found in npm packages"
           else
             echo "No package-lock.json found. Skipping npm scan."
           fi
-
       - name: Format Trivy results for PR comment
         run: |
           echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
           cat os-trivy-result.txt >> formatted-trivy-result.md
 
+          echo "\n### File System Vulnerability Report (apt and others)" >> formatted-trivy-result.md
+          cat fs-trivy-result.txt >> formatted-trivy-result.md || echo "No vulnerabilities found in file system"
+
           if [ -f npm-trivy-result.txt ]; then
             echo "\n### npm Package Vulnerability Report" >> formatted-trivy-result.md
-            cat npm-trivy-result.txt >> formatted-trivy-result.md
+            cat npm-trivy-result.txt >> formatted-trivy-result.md || echo "No vulnerabilities found in npm packages"
           fi
       - name: Post comment to PR
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: formatted-trivy-result.md
       - name: Clean up temporary files
-        run: rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md package-lock.json
+        run: rm -rf os-trivy-result.txt fs-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md temp-container.tar temp-container-filesystem/
