--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -18,28 +18,77 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t my-docker-image .
+
+      - name: Cache Trivy database
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/trivy
+          key: ${{ runner.os }}-trivy-db
+          restore-keys: |
+            ${{ runner.os }}-trivy-db
+
       - name: Setup Trivy
         uses: aquasecurity/setup-trivy@v0.2.0
         with:
           version: latest
+
+  os-scan:
+    needs: scan-and-comment
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Scan Docker image for OS vulnerabilities
         run: |
           trivy image --format table --output os-trivy-result.txt my-docker-image
-      - name: Scan npm packages in Docker container
+
+      - name: Upload OS scan result as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: os-scan-result
+          path: os-trivy-result.txt
+
+  npm-scan:
+    needs: scan-and-comment
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Extract package-lock.json from Docker container
         run: |
-          # Dockerコンテナからpackage-lock.jsonを抽出
           docker create --name temp-container my-docker-image
           docker cp temp-container:/app/package-lock.json package-lock.json || echo "No package-lock.json found"
           docker rm temp-container
-
-          # package-lock.jsonが存在する場合、Trivyでスキャン実行
+      - name: Scan npm packages in Docker container if package-lock.json exists
+        run: |
           if [ -f package-lock.json ]; then
             echo "Scanning npm dependencies..."
             trivy fs --format table --output npm-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM .
           else
             echo "No package-lock.json found. Skipping npm scan."
           fi
+      - name: Upload npm scan result as artifact (if exists)
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: npm-scan-result
+          path: npm-trivy-result.txt
+  format-and-comment:
+    needs:
+      - os-scan
+      - npm-scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download OS scan result artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: os-scan-result
 
+      - name: Download npm scan result artifact (if exists)
+        uses: actions/download-artifact@v3
+        with:
+          name: npm-scan-result
       - name: Format Trivy results for PR comment
         run: |
           echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
@@ -53,5 +102,5 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: formatted-trivy-result.md
-      - name: Clean up temporary files
+      - name: Clean up temporary files and artifacts (optional)
         run: rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md package-lock.json
