--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -15,80 +15,57 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build -t my-docker-image .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Cache Trivy database
+      - name: Cache Docker layers
         uses: actions/cache@v3
         with:
-          path: ~/.cache/trivy
-          key: ${{ runner.os }}-trivy-db
+          path: /tmp/.buildx-cache
+          key: ${{ github.ref }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-trivy-db
+            ${{ github.ref }}
+            refs/head/master
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          tags: my-docker-image:latest
+          load: true
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
       - name: Setup Trivy
         uses: aquasecurity/setup-trivy@v0.2.0
         with:
           version: latest
 
-  os-scan:
-    needs: scan-and-comment
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       - name: Scan Docker image for OS vulnerabilities
         run: |
           trivy image --format table --output os-trivy-result.txt my-docker-image
 
-      - name: Upload OS scan result as artifact
-        uses: actions/upload-artifact@v3
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
         with:
-          name: os-scan-result
-          path: os-trivy-result.txt
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-cache-
 
-  npm-scan:
-    needs: scan-and-comment
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Extract package-lock.json from Docker container
+      - name: Scan npm packages in Docker container
         run: |
           docker create --name temp-container my-docker-image
           docker cp temp-container:/app/package-lock.json package-lock.json || echo "No package-lock.json found"
           docker rm temp-container
-      - name: Scan npm packages in Docker container if package-lock.json exists
-        run: |
+
           if [ -f package-lock.json ]; then
             echo "Scanning npm dependencies..."
             trivy fs --format table --output npm-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM .
           else
             echo "No package-lock.json found. Skipping npm scan."
           fi
-      - name: Upload npm scan result as artifact (if exists)
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: npm-scan-result
-          path: npm-trivy-result.txt
-  format-and-comment:
-    needs:
-      - os-scan
-      - npm-scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download OS scan result artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: os-scan-result
 
-      - name: Download npm scan result artifact (if exists)
-        uses: actions/download-artifact@v3
-        with:
-          name: npm-scan-result
       - name: Format Trivy results for PR comment
         run: |
           echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
@@ -98,9 +75,13 @@ jobs:
             echo "\n### npm Package Vulnerability Report" >> formatted-trivy-result.md
             cat npm-trivy-result.txt >> formatted-trivy-result.md
           fi
+
       - name: Post comment to PR
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: formatted-trivy-result.md
-      - name: Clean up temporary files and artifacts (optional)
-        run: rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md package-lock.json
+
+      - name: Clean up temporary files and move cache
+        run: |
+          rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md package-lock.json
+          rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
