--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -80,6 +80,7 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: formatted-trivy-result.md
+          recreate: true
 
       - name: Clean up temporary files and move cache
         run: |
