--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -53,28 +53,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-cache-
 
-      - name: Scan npm packages in Docker container
-        run: |
-          docker create --name temp-container my-docker-image
-          docker cp temp-container:/app/package-lock.json package-lock.json || echo "No package-lock.json found"
-          docker rm temp-container
+      - name: Install npm dependencies
+        run: npm install
 
-          if [ -f package-lock.json ]; then
-            echo "Scanning npm dependencies..."
-            trivy fs --format table --output npm-trivy-result.txt --severity CRITICAL,HIGH,MEDIUM .
-          else
-            echo "No package-lock.json found. Skipping npm scan."
-          fi
+      - name: Scan npm packages for vulnerabilities
+        run: |
+          trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result.txt .
 
       - name: Format Trivy results for PR comment
         run: |
           echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
           cat os-trivy-result.txt >> formatted-trivy-result.md
-
-          if [ -f npm-trivy-result.txt ]; then
-            echo "\n### npm Package Vulnerability Report" >> formatted-trivy-result.md
-            cat npm-trivy-result.txt >> formatted-trivy-result.md
-          fi
+          echo "\n### NPM Package Vulnerability Report" >> formatted-trivy-result.md
+          cat npm-trivy-result.txt >> formatted-trivy-result.md
 
       - name: Post comment to PR
         uses: marocchino/sticky-pull-request-comment@v2
@@ -84,5 +75,5 @@ jobs:
 
       - name: Clean up temporary files and move cache
         run: |
-          rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md package-lock.json
+          rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
