--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -3,7 +3,8 @@ name: Docker and Package Security Scan
 on:
   pull_request:
     paths:
-      - Dockerfile
+      - '**/Dockerfile'
+      - '**/package.json'
 
 jobs:
   scan:
@@ -14,6 +15,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Find Dockerfiles
+        id: find-dockerfiles
+        run: |
+          files=$(find . -type f -name Dockerfile)
+          if [ -z "$files" ]; then
+            echo "No Dockerfile found."
+            exit 0
+          fi
+          echo "found-dockerfiles=$files" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -27,25 +38,39 @@ jobs:
             ${{ github.ref }}
             refs/head/master
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          tags: my-docker-image:latest
-          load: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+      - name: Build Docker images
+        if: env.found-dockerfiles != ''
+        run: |
+          for dockerfile in ${{ env.found-dockerfiles }}; do
+            image_name=$(basename $(dirname $dockerfile))
+            docker build -t $image_name -f $dockerfile .
+          done
 
       - name: Setup Trivy
         uses: aquasecurity/setup-trivy@v0.2.0
         with:
           version: latest
 
-      - name: Scan Docker image for OS vulnerabilities
+      - name: Scan Docker images for OS vulnerabilities
+        if: env.found-dockerfiles != ''
         run: |
-          trivy image --format table --output os-trivy-result.txt my-docker-image
+          for dockerfile in ${{ env.found-dockerfiles }}; do
+            image_name=$(basename $(dirname $dockerfile))
+            trivy image --format table --output ${image_name}-os-trivy-result.txt $image_name
+          done
+
+      - name: Find package.json files
+        id: find-package-json
+        run: |
+          files=$(find . -type f -name package.json)
+          if [ -z "$files" ]; then
+            echo "No package.json found."
+            exit 0
+          fi
+          echo "found-package-json=$files" >> $GITHUB_ENV
 
       - name: Cache npm dependencies
+        if: env.found-package-json != ''
         uses: actions/cache@v3
         with:
           path: ~/.npm
@@ -53,19 +78,35 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-cache-
 
-      - name: Install npm dependencies
-        run: npm install
-
-      - name: Scan npm packages for vulnerabilities
+      - name: Install npm dependencies and scan packages
+        if: env.found-package-json != ''
         run: |
-          trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result.txt .
+          for package_json in ${{ env.found-package-json }}; do
+            dir=$(dirname $package_json)
+            cd $dir
+            npm install
+            trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result.txt .
+            cd -
+          done
 
       - name: Format Trivy results for PR comment
         run: |
           echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
-          cat os-trivy-result.txt >> formatted-trivy-result.md
+          if [ -n "${{ env.found-dockerfiles }}" ]; then
+            for dockerfile in ${{ env.found-dockerfiles }}; do
+              image_name=$(basename $(dirname $dockerfile))
+              echo "#### $image_name" >> formatted-trivy-result.md
+              cat ${image_name}-os-trivy-result.txt >> formatted-trivy-result.md
+            done
+          fi
           echo "\n### NPM Package Vulnerability Report" >> formatted-trivy-result.md
-          cat npm-trivy-result.txt >> formatted-trivy-result.md
+          if [ -n "${{ env.found-package-json }}" ]; then
+            for package_json in ${{ env.found-package-json }}; do
+              dir=$(basename $(dirname $package_json))
+              echo "#### $dir" >> formatted-trivy-result.md
+              cat $dir/npm-trivy-result.txt >> formatted-trivy-result.md
+            done
+          fi
 
       - name: Post comment to PR
         uses: marocchino/sticky-pull-request-comment@v2
@@ -75,5 +116,5 @@ jobs:
 
       - name: Clean up temporary files and move cache
         run: |
-          rm -f os-trivy-result.txt npm-trivy-result.txt formatted-trivy-result.md
+          rm -f *.txt formatted-trivy-result.md
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
