--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -10,8 +10,8 @@ jobs:
   scan:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write
       contents: read
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -72,7 +72,7 @@ jobs:
             dir=$(dirname $package_json)
             cd $dir
             npm install
-            trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result.txt .
+            trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result-$dir.txt .
             cd -
           done
 
@@ -85,30 +85,16 @@ jobs:
         run: |
           trivy fs --security-checks vuln --scanners vuln --format table --output apt-trivy-result.txt /var/lib/dpkg/status
 
-      - name: Format Trivy results for PR comment
-        run: |
-          echo "### OS Package Vulnerability Report" > formatted-trivy-result.md
-          cat os-trivy-result.txt >> formatted-trivy-result.md
-          if [ -n "${{ env.found-package-json }}" ]; then
-            echo "\n### NPM Package Vulnerability Report" >> formatted-trivy-result.md
-            for package_json in ${{ env.found-package-json }}; do
-              dir=$(basename $(dirname $package_json))
-              echo "#### $dir" >> formatted-trivy-result.md
-              cat $dir/npm-trivy-result.txt >> formatted-trivy-result.md
-            done
-          fi
-          if [ -f apt-trivy-result.txt ]; then
-            echo "\n### APT Package Vulnerability Report" >> formatted-trivy-result.md
-            cat apt-trivy-result.txt >> formatted-trivy-result.md
-          fi
-
-      - name: Post comment to PR
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: Upload Trivy results as artifacts
+        uses: actions/upload-artifact@v3
         with:
-          path: formatted-trivy-result.md
-          recreate: true
+          name: trivy-results
+          path: |
+            os-trivy-result.txt
+            apt-trivy-result.txt
+            npm-trivy-result-*.txt
 
       - name: Clean up temporary files and move cache
         run: |
-          rm -f *.txt formatted-trivy-result.md
+          rm -f *.txt 
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
