--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: write # PRコメントのために必要
 
     steps:
       - name: Checkout code
@@ -44,7 +45,7 @@ jobs:
 
       - name: Scan Docker image for OS vulnerabilities
         run: |
-          trivy image --format table --output os-trivy-result.txt my-docker-image
+          trivy image --format json --output os-trivy-result.json my-docker-image
 
       - name: Find package.json files
         id: find-package-json
@@ -71,30 +72,47 @@ jobs:
           for package_json in ${{ env.found-package-json }}; do
             dir=$(dirname $package_json)
             cd $dir
-            npm install
-            trivy fs --security-checks vuln --scanners vuln --format table --output npm-trivy-result-$dir.txt .
+            npm install --silent # ログを抑制するため --silent を追加
+            trivy fs --security-checks vuln --scanners vuln --format json --output npm-trivy-result-$dir.json .
             cd -
           done
 
-      - name: Install Trivy for APT scanning
-        run: |
-          sudo apt-get update && sudo apt-get install -y --no-install-recommends apt-utils curl
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin
-
       - name: Scan for apt-get package vulnerabilities
         run: |
-          trivy fs --security-checks vuln --scanners vuln --format table --output apt-trivy-result.txt /var/lib/dpkg/status
+          trivy fs --security-checks vuln --scanners vuln --format json --output apt-trivy-result.json /var/lib/dpkg/status
 
-      - name: Upload Trivy results as artifacts
-        uses: actions/upload-artifact@v3
+      - name: Generate PR Comment Content
+        id: generate-comment
+        run: |
+          echo "### Trivy Scan Results" > trivy-comment.md
+
+          echo "#### OS Vulnerabilities" >> trivy-comment.md
+          jq '.Results[] | select(.Vulnerabilities != null) | {Target, Vulnerabilities}' os-trivy-result.json >> trivy-comment.md || echo "No vulnerabilities found." >> trivy-comment.md
+
+          echo "#### APT Package Vulnerabilities" >> trivy-comment.md
+          jq '.Results[] | select(.Vulnerabilities != null) | {Target, Vulnerabilities}' apt-trivy-result.json >> trivy-comment.md || echo "No vulnerabilities found." >> trivy-comment.md
+
+          if [ "${{ env.found-package-json }}" != "" ]; then
+            echo "#### npm Package Vulnerabilities" >> trivy-comment.md
+            for file in npm-trivy-result-*.json; do 
+              jq '.Results[] | select(.Vulnerabilities != null) | {Target, Vulnerabilities}' $file >> trivy-comment.md || echo "No vulnerabilities found in $file." >> trivy-comment.md 
+            done 
+          fi
+
+      - name: Post PR Comment with Trivy Results
+        uses: actions/github-script@v6
         with:
-          name: trivy-results
-          path: |
-            os-trivy-result.txt
-            apt-trivy-result.txt
-            npm-trivy-result-*.txt
+          script: |
+            const fs = require('fs');
+            const comment = fs.readFileSync('trivy-comment.md', 'utf8');
+            github.rest.issues.createComment({
+              issue_number: context.payload.pull_request.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment,
+            });
 
       - name: Clean up temporary files and move cache
         run: |
-          rm -f *.txt 
+          rm -f *.json *.md 
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
