--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -83,29 +83,26 @@ jobs:
 
       - name: Generate Summary Table for PR Comment
         run: |
-          echo "### Trivy Scan Results" > trivy-comment.md
-
           # 各Severityのカウントを計算
-          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[] | select(.Severity=="CRITICAL")] | length' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
-          HIGH_COUNT=$(jq '[.Results[].Vulnerabilities[] | select(.Severity=="HIGH")] | length' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
-          MEDIUM_COUNT=$(jq '[.Results[].Vulnerabilities[] | select(.Severity=="MEDIUM")] | length' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
-          LOW_COUNT=$(jq '[.Results[].Vulnerabilities[] | select(.Severity=="LOW")] | length' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
-
+          CRITICAL_COUNT=$(jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length // 0' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
+          HIGH_COUNT=$(jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="HIGH")] | length // 0' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
+          MEDIUM_COUNT=$(jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="MEDIUM")] | length // 0' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
+          LOW_COUNT=$(jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="LOW")] | length // 0' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json)
+          
           # Markdown形式の表を生成
-          echo "#### Vulnerability Summary" >> trivy-comment.md
+          echo "#### Vulnerability Summary" > trivy-comment.md
           echo "| Severity  | Count | Color |" >> trivy-comment.md
           echo "|-----------|-------|-------|" >> trivy-comment.md
           echo "| CRITICAL  | $CRITICAL_COUNT     | 🟥    |" >> trivy-comment.md
           echo "| HIGH      | $HIGH_COUNT     | 🟧    |" >> trivy-comment.md
           echo "| MEDIUM    | $MEDIUM_COUNT     | 🟨    |" >> trivy-comment.md
           echo "| LOW       | $LOW_COUNT     | 🟩    |" >> trivy-comment.md
-
-          # CRITICALとHIGHの詳細を出力
-          echo "#### CRITICAL and HIGH Vulnerabilities" >> trivy-comment.md
+          
+          # CRITICALとHIGHの詳細情報を追加
           jq -r '
-            .Results[] | 
-            select(.Vulnerabilities != null) | 
-            .Vulnerabilities[] | 
+            .Results[]? |
+            select(.Vulnerabilities != null) |
+            .Vulnerabilities[]? |
             select(.Severity == "CRITICAL" or .Severity == "HIGH") |
             "* Target: \(.Target)\n  - VulnerabilityID: \(.VulnerabilityID)\n  - Severity: \(.Severity)\n  - Package: \(.PkgName) (\(.InstalledVersion))\n  - Fixed Version: \(.FixedVersion)\n  - Title: \(.Title)\n  - Description: \(.Description)"' os-trivy-result.json apt-trivy-result.json npm-trivy-result-*.json >> trivy-comment.md || echo "No CRITICAL or HIGH vulnerabilities found." >> trivy-comment.md
 
