test: remove cache

--- a/.github/workflows/scanner.yaml
+++ b/.github/workflows/scanner.yaml
@@ -20,23 +20,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ github.ref }}-${{ github.sha }}
-          restore-keys: |
-            ${{ github.ref }}
-            refs/head/master
-
       - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           tags: my-docker-image:latest
           load: true
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
       - name: Setup Trivy
         uses: aquasecurity/setup-trivy@v0.2.0
@@ -56,15 +45,6 @@ jobs:
             exit 0
           fi
           echo "found-package-json=$files" >> $GITHUB_ENV
-
-      - name: Cache npm dependencies
-        if: env.found-package-json != ''
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
 
       - name: Install npm dependencies and scan packages
         if: env.found-package-json != ''
@@ -126,7 +106,6 @@ jobs:
               body: comment,
             });
 
-      - name: Clean up temporary files and move cache
+      - name: Clean up temporary files
         run: |
-          rm -f *.json *.md 
-          rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          rm -f *.json *.md
